--- a/03-Method_Measures.Rmd
+++ b/03-Method_Measures.Rmd
@@ -130,25 +130,24 @@ Risk Behavior Surveillance System (YRBSS) at Waves 14+, 16+, 18+, and
 24+ years. Participants were asked to consider the past year in their
 responses.
 
-| Construct                   | Timepoint  | Description                                                                                                                                                                                                                                                     |     |     |
-|-----------------------------|------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----|-----|
-| Thin ideal internalization  | 14         | Thin ideal internalisation was measured at age 14 with the Ideal_Body Stereotype Scale_Revised (Stice, 1998). Adolescents responded to statements regarding appearance ideals rated on a five_point Likert scale from 'strongly agree' to 'strongly disagree.'  |     |     |
-| Body Satisfaction           | 14, 18, 24 | The Body Satisfaction Scale was measured at 14, 18, and 24 and asked individuals to rate their satisfaction with their body parts on a 5-point Likert scale, from 'extremely satisfied' to 'extremely dissatisfied' with higher values indicating higher dissat |     |     |
-| Pressure to lose weight     | 14         | Pressure to lose weight was measured at age 14 with an adapted version of the Perceived Sociocultural Pressure Scale. Pressure to lose weight from friends, family, romantic partners, and the media was recorded.                                              |     |     |
-| Pressure to increase muscle | 14         | Pressure to gain muscle was measured at age 14 with an adapted version of the Perceived Sociocultural Pressure Scale. Pressure to gain muscle from friends, family, romantic partners, and the media was recorded.                                              |     |     |
-| Weight-related teasing      | .          | Adolescents were asked to report weight related teasing from peers and family members with five possible responses ranging from "never" to "at least once a week."                                                                                              |     |     |
-| Dieting                     | 14, 16, 18 | Participant dieting was measured at age 14, 16, and 18 and measured frequency during the past year YP went on a diet to lose weight/keep from gaining weight, length of diet, amount of weight lost, and amount of weight regained.                             |     |     |
-| External Eating             | 14         | Participants completed a variation of the Dutch Eating Behavior Questionnaire (DEBQ) at age 14. Dysfunctional eating patterns such as emotional eating, external eating, and restrained eating were assessed.                                                   |     |     |
-| Restrained Eating           | 14         | Participants completed a variation of the Dutch Eating Behavior Questionnaire (DEBQ) at age 14. Dysfunctional eating patterns such as emotional eating, external eating, and restrained eating were assessed.                                                   |     |     |
-| Emotional Eating            | 14         | Participants completed a variation of the Dutch Eating Behavior Questionnaire (DEBQ) at age 14. Dysfunctional eating patterns such as emotional eating, external eating, and restrained eating were assessed.                                                   |     |     |
-| Fear of Weight gain         | 14, 24     | Participants asked the degree they worried about gaining a little weight (two pounds) in the past year.                                                                                                                                                         |     |     |
-| Maternal Dieting            | 14         | Mothers were asked the frequency they tried to lose weight in the past year.                                                                                                                                                                                    |     |     |
-| Craving                     | 16         | Participants were asked the frequency of occurance of strong cravings for food that they find hard to resist.                                                                                                                                                   |     |     |
-| Weight intentions           | 14, 18     | Respondent asked about what they are trying to do with their weight.                                                                                                                                                                                            |     |     |
-| Weight Perception           | 14, 18     | Participant notes their perception of their weight.                                                                                                                                                                                                             |     |     |
-| Weight valuation            | 18         | Participant notes the degree to which their weight has made a difference to how they feel about themselves.                                                                                                                                                     |     |     |
-| Feeling fat                 | 24         | Participant notes the frequency that they have felt fat in the past year.                                                                                                                                                                                       |     |     |
-| Weight/Shape concern        | 14         | Weight and shape concern at age 14 was assessed using a 4 item questionaire adapted from the McKnight Risk Factor Survey.                                                                                                                                       |     |     |
+| Construct                   | Timepoint  | Description                                                                                                                                                                                                                                                               |     |     ||-------|-------|----------------------------------------------|-------|-------|
+| Thin ideal internalization  | 14         | Thin ideal internalization was measured at age 14 with the Ideal_Body Stereotype Scale_Revised (Stice, 1998). Adolescents responded to statements regarding appearance ideals rated on a five_point Likert scale from 'strongly agree' to 'strongly disagree.'            |     |     |
+| Body Satisfaction           | 14, 18, 24 | The Body Satisfaction Scale was measured at 14, 18, and 24 and asked individuals to rate their satisfaction with their body parts on a 5-point Likert scale, from 'extremely satisfied' to 'extremely dissatisfied' with higher values indicating higher dissatisfaction. |     |     |
+| Pressure to lose weight     | 14         | Pressure to lose weight was measured at age 14 with an adapted version of the Perceived Sociocultural Pressure Scale. Pressure to lose weight from friends, family, romantic partners, and the media was recorded.                                                        |     |     |
+| Pressure to increase muscle | 14         | Pressure to gain muscle was measured at age 14 with an adapted version of the Perceived Sociocultural Pressure Scale. Pressure to gain muscle from friends, family, romantic partners, and the media was recorded.                                                        |     |     |
+| Weight-related teasing      | .          | Adolescents were asked to report weight related teasing from peers and family members with five possible responses ranging from "never" to "at least once a week."                                                                                                        |     |     |
+| Dieting                     | 14, 16, 18 | Participant dieting was measured at age 14, 16, and 18 and measured frequency during the past year YP went on a diet to lose weight/keep from gaining weight, length of diet, amount of weight lost, and amount of weight regained.                                       |     |     |
+| External Eating             | 14         | Participants completed a variation of the Dutch Eating Behavior Questionnaire (DEBQ) at age 14. Dysfunctional eating patterns such as emotional eating, external eating, and restrained eating were assessed.                                                             |     |     |
+| Restrained Eating           | 14         | Participants completed a variation of the Dutch Eating Behavior Questionnaire (DEBQ) at age 14. Dysfunctional eating patterns such as emotional eating, external eating, and restrained eating were assessed.                                                             |     |     |
+| Emotional Eating            | 14         | Participants completed a variation of the Dutch Eating Behavior Questionnaire (DEBQ) at age 14. Dysfunctional eating patterns such as emotional eating, external eating, and restrained eating were assessed.                                                             |     |     |
+| Fear of Weight gain         | 14, 24     | Participants asked the degree they worried about gaining a little weight (two pounds) in the past year.                                                                                                                                                                   |     |     |
+| Maternal Dieting            | 14         | Mothers were asked the frequency they tried to lose weight in the past year.                                                                                                                                                                                              |     |     |
+| Craving                     | 16         | Participants were asked the frequency of occurrence of strong cravings for food that they find hard to resist.                                                                                                                                                            |     |     |
+| Weight intentions           | 14, 18     | Respondent asked about what they are trying to do with their weight.                                                                                                                                                                                                      |     |     |
+| Weight Perception           | 14, 18     | Participant notes their perception of their weight.                                                                                                                                                                                                                       |     |     |
+| Weight valuation            | 18         | Participant notes the degree to which their weight has made a difference to how they feel about themselves.                                                                                                                                                               |     |     |
+| Feeling fat                 | 24         | Participant notes the frequency that they have felt fat in the past year.                                                                                                                                                                                                 |     |     |
+| Weight/Shape concern        | 14         | Weight and shape concern at age 14 was assessed using a 4 item questionnaire adapted from the McKnight Risk Factor Survey.                                                                                                                                                |     |     |
 
 ### Physical Activity
 
@@ -210,7 +209,7 @@ engaging in exercise, exercising when sick or injured, and feeling guilt
 when unable to exercise.
 
 | **Table X. Diagnostic Criteria**                                    |                 |                                                                                                                                                                                                              |                                                                                                                                                                                                              |              |              |
-|---------------------------------------------------------------------|-----------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------|--------------|
+|---------|---------|------------------|------------------|---------|---------|
 |                                                                     |                 |                                                                                                                                                                                                              |                                                                                                                                                                                                              |              |              |
 | **Diagnoses**                                                       | **Report Type** | **Wave 14+**                                                                                                                                                                                                 | **Wave 16+**                                                                                                                                                                                                 | **Wave 18+** | **Wave 24+** |
 | Anorexia Nervosa (AN)                                               | Self-report     | 1.Underweight (body mass index [BMI]\<18.5)                                                                                                                                                                  | 1.Underweight (BMI\<18.5)                                                                                                                                                                                    |              |              |
