--- a/03-Method_Measures.Rmd
+++ b/03-Method_Measures.Rmd
@@ -1,10 +1,8 @@
-
 ## Measures
 
 ### Socioeconomic Status (SES)
 
-Measures of parent occupation were obtained for both mother and partner during child gestation. Parental occupations were then classified as unskilled(0), partly skilled (1), skilled manual (2), skilled non-manual (3), manegerial and technical (4), or professional (5). Of reported parent occupations, the highest reported occupation was used as a proxy for parent SES, to be treated as a continuous (0-5) covariate in
-analyses.
+Measures of parent occupation were obtained for both mother and partner during child gestation. Parental occupations were then classified as unskilled(0), partly skilled (1), skilled manual (2), skilled non-manual (3), manegerial and technical (4), or professional (5). Of reported parent occupations, the highest reported occupation was used as a proxy for parent SES, to be treated as a continuous (0-5) covariate in analyses.
 
 ### Body Mass Index Z-score (BMI-Z) at Age 10
 
@@ -35,14 +33,7 @@ At age 24, participants were asked the frequency with which they exercised to lo
 
 #### Maladaptive Exercise
 
-Issues that are associated with exercise were also reported at ages
-14,16, 18, and 24 years. At all assessment points, participants reported
-whether exercise interferes with work/school (14,16,18), or their daily
-routine (24). At ages 14 and 24, participants also reported whether they
-exercised to lose weight even when sick or injured. At ages 16 and 18
-years, participants reported whether they felt guilty about missing an
-exercise session -- see Table \@ref(tab:tab2) . Responses options for
-exercise issues were 'No', 'yes - Sometimes', or 'Yes - Frequently'.
+Issues that are associated with exercise were also reported at ages 14,16, 18, and 24 years. At all assessment points, participants reported whether exercise interferes with work/school (14,16,18), or their daily routine (24). At ages 14 and 24, participants also reported whether they exercised to lose weight even when sick or injured. At ages 16 and 18 years, participants reported whether they felt guilty about missing an exercise session -- see Table \@ref(tab:tab2) . Responses options for exercise issues were 'No', 'yes - Sometimes', or 'Yes - Frequently'.
 
 ```{r tab2}
 # x <- tibble(age = c(14,16,18,24), Interferes = c('x','x','x','x'), Sick_Injured = c('x',' ',' ', 'x'), Guilt = c('' ,'x','x', '')) 
@@ -50,48 +41,17 @@ exercise issues were 'No', 'yes - Sometimes', or 'Yes - Frequently'.
 # knitr::kable(x, caption = 'Exercise Issues Assessed at Each Age')
 ```
 
-Exercise issues are deemmed to be 'present' at each time point if an
-individual endorses: (1) exercise interfering with work/school sometimes
-or more OR frequent guilt when missing an exercise session at ages 16
-and 18 years and (2) exercise interfering with work/school/daily routine
-sometimes or more OR exercising even when sick/injured sometimes or more
-at ages 14 and 24 years.
+Exercise issues are deemmed to be 'present' at each time point if an individual endorses: (1) exercise interfering with work/school sometimes or more OR frequent guilt when missing an exercise session at ages 16 and 18 years and (2) exercise interfering with work/school/daily routine sometimes or more OR exercising even when sick/injured sometimes or more at ages 14 and 24 years.
 
-The presence of maladaptive exercise in this study was defined as
-exercising for weight loss **sometimes or frequently** and at least one
-**exercise issue** defined as present at each time point. Frequency of
-exercise for weight loss as sometimes or more was chosen for this
-definition as (1) existing literature suggests that frequency of
-exercise may be less important than cognitive features in defining
-exercise risk in the context of eating disorders
-[@adkinsDoesExcessiveCompulsive2005; @mondUpdateDefinitionExcessive2006]
-and (2) the nature of the epidemiological sample and the concomitant
-goals of this paper are such that we are interested in identifying early
-risk indicators, which may be best captured via a broad (vs. narrow)
-definition of maladaptive exercise. The primary variable to define
-maladaptive exercise was derived as described, resulting in a
-dichotomous outcome (0 = Absent, 1 = Present).
+The presence of maladaptive exercise in this study was defined as exercising for weight loss **sometimes or frequently** and at least one **exercise issue** defined as present at each time point. Frequency of exercise for weight loss as sometimes or more was chosen for this definition as (1) existing literature suggests that frequency of exercise may be less important than cognitive features in defining exercise risk in the context of eating disorders [@adkinsDoesExcessiveCompulsive2005; @mondUpdateDefinitionExcessive2006] and (2) the nature of the epidemiological sample and the concomitant goals of this paper are such that we are interested in identifying early risk indicators, which may be best captured via a broad (vs. narrow) definition of maladaptive exercise. The primary variable to define maladaptive exercise was derived as described, resulting in a dichotomous outcome (0 = Absent, 1 = Present).
 
 #### Exercise Gropus
 
-Exericse groups over time are defined for descriptive analyses and
-transition states, replicating groups defined in
-@schaumbergProspectiveAssociationsDriven2022. Those who report no
-exericse for weight loss at each time point are placed in a 'No Exercise
-for Weight Loss' group, those who report exercise for weight loss at
-least sometimes, but do not meet criteria for maladaptive exercise are
-placed in an 'Exercise for Weight Loss' group, and those meeting
-maladaptive exercise criteria are placed in the 'Maladaptive Exercise'
-group.
+Exericse groups over time are defined for descriptive analyses and transition states, replicating groups defined in @schaumbergProspectiveAssociationsDriven2022. Those who report no exericse for weight loss at each time point are placed in a 'No Exercise for Weight Loss' group, those who report exercise for weight loss at least sometimes, but do not meet criteria for maladaptive exercise are placed in an 'Exercise for Weight Loss' group, and those meeting maladaptive exercise criteria are placed in the 'Maladaptive Exercise' group.
 
 #### Eating Disorder Behaviors
 
-The measurement of eating disorder behaviors in adolescence captures a
-more complete range of behaviors beyond ED diagnosis. Eating disorder
-behaviors were assessed through questionnaires developed from the Youth
-Risk Behavior Surveillance System (YRBSS) at Waves 14+, 16+, 18+, and
-24+ years. Participants were asked to consider the past year in their
-responses.
+The measurement of eating disorder behaviors in adolescence captures a more complete range of behaviors beyond ED diagnosis. Eating disorder behaviors were assessed through questionnaires developed from the Youth Risk Behavior Surveillance System (YRBSS) at Waves 14+, 16+, 18+, and 24+ years. Participants were asked to consider the past year in their responses.
 
 | Construct \| Timepoint \| Description \| \| \|\|-------\|-------\|----------------------------------------------\|-------\|-------\|
 | Thin ideal internalization \| 14 \| Thin ideal internalization was measured at age 14 with the Ideal_Body Stereotype Scale_Revised (Stice, 1998). Adolescents responded to statements regarding appearance ideals rated on a five_point Likert scale from 'strongly agree' to 'strongly disagree.' \| \| \|
@@ -116,36 +76,15 @@ responses.
 
 #### Accelerometers
 
-Physical activity data was captured using the Actigraph^tm^
-accelerometer, which is often used in child physical activity studies.
-Participants were instructed to wear accelerometers around the waist
-just above their right hip for the duration of the tracking period.
-Accelerometer data was collected at the following four time points. At
-ages 11.5, 13.5, and 15.5, during a clinic visit, young people were
-asked to wear the accelerometer for 7 days, beginning the day after
-clinic attendance [@mattocksUseAccelerometersLarge2008]. At age 24
-participants were asked to wear accelerometers for four days beginning
-the day after clinic attendance [@troianoPhysicalActivityUnited2008].
+Physical activity data was captured using the Actigraph^tm^ accelerometer, which is often used in child physical activity studies. Participants were instructed to wear accelerometers around the waist just above their right hip for the duration of the tracking period. Accelerometer data was collected at the following four time points. At ages 11.5, 13.5, and 15.5, during a clinic visit, young people were asked to wear the accelerometer for 7 days, beginning the day after clinic attendance [@mattocksUseAccelerometersLarge2008]. At age 24 participants were asked to wear accelerometers for four days beginning the day after clinic attendance [@troianoPhysicalActivityUnited2008].
 
 #### CPM
 
-Accelerometer data was used to extract total physical activity which was
-measured as the total counts per minute (CPM) over the period of valid
-recording. Associations with total physical activity are usually
-calculated per 100 cpm as this difference is of a similar order to the
-differences observed between males and females in these data.
+Accelerometer data was used to extract total physical activity which was measured as the total counts per minute (CPM) over the period of valid recording. Associations with total physical activity are usually calculated per 100 cpm as this difference is of a similar order to the differences observed between males and females in these data.
 
 #### MVPA
 
-Moderate to Vigerous Physical Activity (MVPA) measures the average
-amount of time spent above a CPM cutoff, these cutoff points differ by
-age groups. At ages 11.5, 13.5 and 15.5 A value of \>= 3600 cpm was
-originally used to define MVPA at the time of the data collection
-[@mattocksUseAccelerometersLarge2008]. More recently, following Evenson
-et. al. [@evensonCalibrationTwoObjective2008], who calculated a lower
-cutpoint of \>=2296. Both sets of data were included in analysis. At age
-24 MVPA cutoff was established at \>2020 cpm
-[@troianoPhysicalActivityUnited2008].
+Moderate to Vigerous Physical Activity (MVPA) measures the average amount of time spent above a CPM cutoff, these cutoff points differ by age groups. At ages 11.5, 13.5 and 15.5 A value of \>= 3600 cpm was originally used to define MVPA at the time of the data collection [@mattocksUseAccelerometersLarge2008]. More recently, following Evenson et. al. [@evensonCalibrationTwoObjective2008], who calculated a lower cutpoint of \>=2296. Both sets of data were included in analysis. At age 24 MVPA cutoff was established at \>2020 cpm [@troianoPhysicalActivityUnited2008].
 
 #### Valid Days
 
@@ -153,9 +92,7 @@ Valid Days are calculated using a cutoff of minutes per day that an acceleromete
 
 ### Eating Disorder Diagnoses
 
-Eating disorder diagnoses (AN, BN,BED, purging disorder [PD], and Other Specified Feeding and Eating Disorder (OSFED)) for adolescents were derived using questionnaire data from the Youth Risk Behavior
-Surveillance System questionnaire (YRBSS) using DSM-5 diagnostic criteria (excluding OSFED)
-[@micaliAdolescentEatingDisorders2015][@americanpsychiatricassociationDiagnosticStatisticalManual2013]. AN was assessed using both the YRBSS self-report and parental report since adolescents tend to under-report AN symptoms [@houseDiagnosingEatingDisorders2008]. Table X shows the criteria used for each diagnosis [@micaliAdolescentEatingDisorders2015].
+Eating disorder diagnoses (AN, BN,BED, purging disorder [PD], and Other Specified Feeding and Eating Disorder (OSFED)) for adolescents were derived using questionnaire data from the Youth Risk Behavior Surveillance System questionnaire (YRBSS) using DSM-5 diagnostic criteria (excluding OSFED) [@micaliAdolescentEatingDisorders2015][@americanpsychiatricassociationDiagnosticStatisticalManual2013]. AN was assessed using both the YRBSS self-report and parental report since adolescents tend to under-report AN symptoms [@houseDiagnosingEatingDisorders2008]. Table X shows the criteria used for each diagnosis [@micaliAdolescentEatingDisorders2015].
 
 Diagnoses were assessed at Waves14+, 16+, 18+, and 24+. Body mass index (BMI), which is an objective measure, was also collected at face to face assessment (median ages: 13.8, 15.5, 17.8, and 24.0) and used as a diagnostic criteria for AN. Furthermore, an underweight assignment wasdetermined using age, gender, and BMI-specific cutoffs (based on UK reference data); corresponding to World Health Organization (WHO) grade 1 thinness [@coleBodyMassIndex2007]. Excessive exercise, which is used as criteria for an AN and OSFED diagnoses, was assigned to the adolescent if they found themselves lacking time to do schoolwork due to engaging in exercise, exercising when sick or injured, and feeling guilt when unable to exercise.
 
